--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
 	},
 	"type": "module",
 	"dependencies": {
+		"@random-tables/biome": "^1.1.1",
 		"@random-tables/generator-logic": "^1.0.2",
 		"@random-tables/npc-fantasy": "^1.6.6"
 	}
