--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "online-tables",
-	"version": "0.0.1",
+	"version": "0.2.0",
 	"private": true,
 	"scripts": {
 		"dev": "vite dev",
@@ -30,6 +30,9 @@
 		"@random-tables/biome": "^1.1.1",
 		"@random-tables/factions": "^1.1.1",
 		"@random-tables/generator-logic": "^1.0.2",
-		"@random-tables/npc-fantasy": "^1.6.6"
+		"@random-tables/npc-fantasy": "^1.6.6",
+		"@random-tables/utility-names": "^1.3.1",
+		"@random-tables/utility-names-fantasy": "^1.4.3",
+		"@random-tables/utility-names-historic": "^1.1.2"
 	}
 }
